Shared memory System V

--- a/Chat/Makefile
+++ b/Chat/Makefile
@@ -4,8 +4,8 @@ B=build/
 chat: clean folders client
 
 
-client: build/client.o build/sig_winch.o build/interface.o build/window_chat.o build/window_input.o build/size_window.o build/term.o build/init_color.o build/registration.o build/send_message.o build/receive_message.o build/message.o
-	gcc build/client.o  build/sig_winch.o build/interface.o build/window_chat.o build/window_input.o build/size_window.o build/term.o build/init_color.o build/registration.o build/send_message.o build/receive_message.o build/message.o -lncurses -lpthread -lrt -o client -ggdb3
+client: build/client.o build/sig_winch.o build/interface.o build/window_chat.o build/window_input.o build/size_window.o build/term.o build/init_color.o build/registration.o build/message.o build/receive_message_system_v.o build/receive_message_posix.o build/send_message_system_v.o build/send_message_posix.o build/send_message_shmem_system_v.o build/receive_message_shmem_system_v.o
+	gcc build/client.o  build/sig_winch.o build/interface.o build/window_chat.o build/window_input.o build/size_window.o build/term.o build/init_color.o build/registration.o  build/message.o build/receive_message_system_v.o build/receive_message_posix.o build/send_message_system_v.o build/send_message_posix.o build/send_message_shmem_system_v.o build/receive_message_shmem_system_v.o -lncurses -lpthread -lrt -o client -ggdb3
 
 build/client.o: client.c
 	$(OBJ)
@@ -38,13 +38,25 @@ build/init_color.o: ./interface/color/init_color.c
 build/registration.o: ./interface/registration/registration.c
 	$(OBJ)
 
-build/send_message.o: ./message/send_message.c
-	$(OBJ)
-
-build/receive_message.o: ./message/receive_message.c
-	$(OBJ)
-
 build/message.o: ./message/message.c
+	$(OBJ)
+
+build/receive_message_system_v.o: ./message/receive_message_system_v.c
+	$(OBJ)
+
+build/receive_message_posix.o: ./message/receive_message_posix.c
+	$(OBJ)
+
+build/send_message_system_v.o: ./message/send_message_system_v.c
+	$(OBJ)
+
+build/send_message_posix.o: ./message/send_message_posix.c
+	$(OBJ)
+
+build/send_message_shmem_system_v.o: ./message/send_message_shmem_system_v.c
+	$(OBJ)
+
+build/receive_message_shmem_system_v.o: ./message/receive_message_shmem_system_v.c
 	$(OBJ)
 
 clean:
